--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
         required: true
       sampleRepoLink:
         description: Link to the HyperExecute sample repo
-        default: https://github.com/LambdaTest/testng-selenium-hyperexecute-sample
+        default: https://github.com/ritamganguli/LT_hyperx_Java_Testng.git
         required: true
 
 jobs:
