--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
           curl https://downloads.lambdatest.com/hyperexecute/windows/hyperexecute.exe -o hyperexecute.exe
           export LT_USERNAME=${{ github.event.inputs.username }}
           export LT_ACCESS_KEY=${{ github.event.inputs.accessKey }}
+          export LT_BUILD_NAME="HyperExecute -Demonstration of the TestNG Framework"
+          echo $LT_BUILD_NAME
           echo $LT_USERNAME
           echo $LT_ACCESS_KEY
           ./hyperexecute --user $LT_USERNAME --key $LT_ACCESS_KEY --config yaml/win/testng_hyperexecute_autosplit_sample.yaml --download-artifacts --download-report
