--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -38,7 +38,7 @@ jobs:
           curl https://downloads.lambdatest.com/hyperexecute/windows/hyperexecute.exe -o hyperexecute.exe
           export LT_USERNAME=${{ github.event.inputs.username }}
           export LT_ACCESS_KEY=${{ github.event.inputs.accessKey }}
-          export LT_BUILD_NAME="HyperExecute -Demonstration of the TestNG Framework"
+          export LT_BUILD_NAME="Standard -Demonstration of the TestNG Framework"
           echo $LT_BUILD_NAME
           echo $LT_USERNAME
           echo $LT_ACCESS_KEY
