--- a/yaml/win/testng_hyperexecute_matrix_sample.yaml
+++ b/yaml/win/testng_hyperexecute_matrix_sample.yaml
@@ -17,6 +17,7 @@ runtime:
 env:
   # PAT: ${{ .secrets.testKey }}
   CACHE_DIR: m2_cache_dir
+  LT_BUILD_NAME: "HyperExecute -Demonstration of the TestNG Framework"
 
 cacheKey: '{{ checksum "pom.xml" }}'
 cacheDirectories:
