--- a/yaml/win/v1/testng_hyperexecute_autosplit_sample.yaml
+++ b/yaml/win/v1/testng_hyperexecute_autosplit_sample.yaml
@@ -38,7 +38,7 @@ uploadArtefacts:
 testDiscovery:
   type: raw
   mode: dynamic
-  command: grep 'test name' xml/testng_win.xml | awk '{print$2}' | sed 's/name=//g' | sed 's/\x3e//g'
+  command: cat testDicover.txt
 
 testRunnerCommand: mvn test `-Dplatname=win `-Dmaven.repo.local=./.m2 dependency:resolve `-DselectedTests=$test
 
