--- a/yaml/win/v1/testng_hyperexecute_autosplit_sample.yaml
+++ b/yaml/win/v1/testng_hyperexecute_autosplit_sample.yaml
@@ -12,7 +12,7 @@ concurrency: 4
 env:
   # PAT: ${{ .secrets.testKey }}
   CACHE_DIR: m2_cache_dir
-  # LT_BUILD_NAME: "HyperExecute -Demonstration of the TestNG Framework"
+  LT_BUILD_NAME: ${LT_BUILD_NAME}
 
 cacheKey: '{{ checksum "pom.xml" }}'
 cacheDirectories:
@@ -22,7 +22,7 @@ pre:
   # Download and install packages in the CACHE_DIR.
   # Skip execution of the tests in the pre step
   - mvn -Dmaven.repo.local=./.m2 dependency:resolve
-  - echo $LT_BUILD_NAME
+  - echo ${LT_BUILD_NAME}
 
 post:
   - cat yaml/win/v1/testng_hyperexecute_autosplit_sample.yaml
